# the-forge-template

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ChessScene.cpp  ChessScene.h  ColorGrading.cpp  ColorGrading.h  Demo2Scene.cpp  Demo2Scene.h  DemoScene.cpp  DemoScene.h  DrawQuad.cpp  DrawQuad.h  DrawShape.cpp  DrawShape.h  IScene.h  LICENSE  MainApp.cpp  MainApp.h  PostProcessing.cpp  PostProcessing.h  QuadDemoScene.cpp  README.md  SMAA.cpp  SMAA.h  SceneManagement.cpp  SceneManagement.h  Settings.h  ShapeDrawer.cpp  ShapeDrawer.h  demo_scene.cpp  demo_scene.h  main.cpp  main.h  scene.h  scene_manager.cpp  scene_manager.h  the-forge-template.sln
.github/workflows/: linux.yaml  windows.yaml
Meshes/: Chess.gltf
Textures/: Bishop_black_ORM.DDS  Bishop_white_ORM.DDS  Castle_ORM.DDS  Castle_normal.DDS  Chessboard_ORM.DDS  King_black_ORM.DDS  King_black_normal.DDS  King_white_ORM.DDS  King_white_normal.DDS  Knight_ORM.DDS  Knight_normal.DDS  Pawn_ORM.DDS  Pawn_normal.DDS  Quad0.dds  Quad1.dds  Queen_black_ORM.DDS  Queen_black_normal.DDS  Queen_white_ORM.DDS  Queen_white_normal.DDS  bishop_black_base_color.DDS  bishop_black_normal.DDS  bishop_white_base_color.DDS  bishop_white_normal.DDS  castle_black_base_color.DDS  castle_white_base_color.DDS  chessboard_base_color.DDS  chessboard_normal.DDS  king_black_base_color.DDS  king_white_base_color.DDS  knight_black_base_color.DDS  knight_white_base_color.DDS  pawn_black_base_color.DDS  pawn_white_base_color.DDS  queen_black_base_color.DDS  queen_white_base_color.DDS
project/: AppInterface.cpp  AppInterface.h  MainApp.cpp  MainApp.h  NopScene.cpp  NopScene.h  Scene.cpp  Scene.h  SceneStruct.cpp  SceneStruct.h  TestScene.cpp  TestScene.h  cpp.hint  main.cpp  project.vcxproj  project.vcxproj.filters
project/Meshes/: model.glb  model.gltf
project/Scripts/: compile_shaders.py  postbuild.bat  the-forge-postbuild.bat
project/Shaders/: model.frag  model.frag.fsl  model.vert  model.vert.fsl
project/Textures/: texture.dds
shaders/FSL/: ShaderList.fsl  basic.frag.fsl  chess-albedo.frag.fsl  chess-albedo.vert.fsl  chess-resources.h.fsl  color_grading.frag.fsl  color_grading.h.fsl  color_grading.vert.fsl  demo2_lit.frag.fsl  demo2_object.frag.fsl  demo2_object.vert.fsl  demo2_resources.h.fsl  demo2_shadow.frag.fsl  demo2_shadow.vert.fsl  quad.frag.fsl  quad.h.fsl  quad.vert.fsl  quad_resource.fsl  quad_shadow.vert.fsl  resources.h.fsl  shadow.frag.fsl  smaa-blendingweight.frag.fsl  smaa-blendingweight.vert.fsl  smaa-edges.frag.fsl  smaa-edges.vert.fsl  smaa-include.h.fsl  smaa-neighborhoodblend.frag.fsl  smaa-neighborhoodblend.vert.fsl  sphere.vert.fsl  sphere_resource.fsl  sphere_shadow.vert.fsl
shaders/FSL/demo2/: ShaderList.fsl  object.vert.fsl  resources.h.fsl
src/: ColorGrading.cpp  Demo2Scene.cpp  Demo2Scene.h  DemoScene.cpp  DemoScene.h  DrawQuad.cpp  MainApp.cpp  QuadDemoScene.cpp  QuadDemoScene.h  Settings.h
the-forge-lib/: the-forge-lib.vcxproj  the-forge-lib.vcxproj.filters
toolchain/: linux.cmake
